--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 14:05:02 2018</p>
+         Last Run: Thu Nov  1 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>7</td>
                         <td>79</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SSW</td>
-                        <td>56</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,7 +50,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "2",
                  "5"
                ]
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "57",
                  "56",
-                 "55",
                  "54"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 14:05:02 2018</p>
+         Last Run: Thu Nov  1 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,31 +248,31 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>50</td>
+                        <td>53</td>
                         <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>37</td>
+                        <td>39</td>
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>37</td>
+                        <td>39</td>
                         <td>53</td>
                         <td>0</td>
                         <td>11</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "50",
-                 "37",
-                 "37"
+                 "53",
+                 "39",
+                 "39"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
-                 "95",
+                 "96",
+                 "96",
                  "95"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 14:05:02 2018</p>
+         Last Run: Thu Nov  1 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>18</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNW</td>
@@ -488,9 +488,9 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NNW</td>
                         <td>86</td>
                      </tr>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "76",
                  "75",
-                 "75",
-                 "76"
+                 "77"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 14:05:02 2018</p>
+         Last Run: Thu Nov  1 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,26 +683,26 @@
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>12</td>
+                        <td>13</td>
                         <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>21</td>
+                        <td>22</td>
                         <td>74</td>
                         <td>0</td>
                         <td>6</td>
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "12",
-                 "12",
-                 "21"
+                 "13",
+                 "22"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "79",
+                 "72",
+                 "80",
                  "83"
                ]
              }
