--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 15:05:02 2018</p>
+         Last Run: Thu Nov  1 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-1</td>
-                        <td>7</td>
-                        <td>79</td>
+                        <td>6</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SSW</td>
-                        <td>57</td>
+                        <td>SW</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,23 +46,23 @@
                         <td>4</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>56</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>54</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>54</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
                  "6",
-                 "5"
+                 "6",
+                 "4"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "65",
+                 "80",
+                 "66",
                  "54"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "56",
-                 "54"
+                 "59",
+                 "53",
+                 "49"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 15:05:02 2018</p>
+         Last Run: Thu Nov  1 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>53</td>
-                        <td>56</td>
-                        <td>1</td>
-                        <td>11</td>
-                        <td>WNW</td>
-                        <td>96</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>39</td>
+                        <td>24</td>
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>96</td>
+                        <td>91</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>19</td>
+                        <td>52</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>WNW</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>39</td>
-                        <td>53</td>
-                        <td>0</td>
+                        <td>Mostly Cloudy</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>21</td>
+                        <td>49</td>
+                        <td>1</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>95</td>
+                        <td>NW</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "6",
                  "6",
-                 "6"
+                 "9"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "8",
                  "8",
-                 "8"
+                 "9"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "39",
-                 "39"
+                 "24",
+                 "19",
+                 "21"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
                  "55",
-                 "53"
+                 "52",
+                 "49"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "96",
-                 "95"
+                 "91",
+                 "78",
+                 "71"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 15:05:02 2018</p>
+         Last Run: Thu Nov  1 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>18</td>
+                        <td>Snow Showers</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>32</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>18</td>
-                        <td>75</td>
+                        <td>Snow Showers</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>30</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>87</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -490,9 +490,9 @@
                         <td>24</td>
                         <td>77</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>86</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
+                 "-7",
+                 "-7",
                  "-7"
                ]
              },
@@ -531,8 +531,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
-                 "-3",
+                 "-4",
+                 "-4",
                  "-4"
                ]
              }
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "18",
+                 "32",
+                 "30",
                  "24"
                ]
              },
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "76",
-                 "75",
+                 "76",
                  "77"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "87",
-                 "86"
+                 "89",
+                 "89",
+                 "88"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 15:05:02 2018</p>
+         Last Run: Thu Nov  1 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-6</td>
-                        <td>-9</td>
+                        <td>Partly Cloudy</td>
+                        <td>-7</td>
+                        <td>-10</td>
                         <td>12</td>
-                        <td>70</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNE</td>
-                        <td>72</td>
+                        <td>N</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-6</td>
-                        <td>-9</td>
-                        <td>13</td>
-                        <td>71</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>NE</td>
-                        <td>80</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>22</td>
+                        <td>13</td>
                         <td>74</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>83</td>
+                        <td>NNE</td>
+                        <td>46</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-7</td>
+                        <td>-10</td>
+                        <td>14</td>
+                        <td>75</td>
+                        <td>0</td>
+                        <td>6</td>
+                        <td>NNE</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
-                 "-9",
+                 "-10",
+                 "-10",
                  "-10"
                ]
              },
@@ -746,8 +746,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
-                 "-6",
+                 "-7",
+                 "-7",
                  "-7"
                ]
              }
@@ -807,7 +807,7 @@
                "data":[
                  "12",
                  "13",
-                 "22"
+                 "14"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "71",
-                 "74"
+                 "73",
+                 "74",
+                 "75"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "80",
-                 "83"
+                 "44",
+                 "46",
+                 "47"
                ]
              }
            ]
