--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 16:05:02 2018</p>
+         Last Run: Thu Nov  1 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -32,25 +32,25 @@
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-1</td>
+                        <td>-2</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>6</td>
-                        <td>66</td>
+                        <td>5</td>
+                        <td>63</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>53</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>4</td>
                         <td>54</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>49</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "2",
                  "5"
                ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "6",
+                 "5",
                  "4"
                ]
              },
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "66",
+                 "78",
+                 "63",
                  "54"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "53",
-                 "49"
+                 "58",
+                 "55",
+                 "53"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 16:05:02 2018</p>
+         Last Run: Thu Nov  1 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>24</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>23</td>
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>91</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,18 +261,18 @@
                         <td>8</td>
                         <td>6</td>
                         <td>19</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>21</td>
+                        <td>20</td>
                         <td>49</td>
                         <td>1</td>
                         <td>11</td>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "6",
+                 "5",
                  "6",
                  "9"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "8",
+                 "7",
                  "8",
                  "9"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
+                 "23",
                  "19",
-                 "21"
+                 "20"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "52",
+                 "51",
                  "49"
                ]
              },
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
-                 "78",
+                 "90",
+                 "77",
                  "71"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 16:05:02 2018</p>
+         Last Run: Thu Nov  1 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,20 +463,20 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>30</td>
-                        <td>76</td>
+                        <td>24</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -488,7 +488,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "30",
+                 "31",
+                 "24",
                  "24"
                ]
              },
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "76",
-                 "76",
-                 "77"
+                 "75",
+                 "76"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
+                 "90",
                  "89",
                  "88"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 16:05:02 2018</p>
+         Last Run: Thu Nov  1 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-7</td>
                         <td>-10</td>
                         <td>12</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
@@ -690,12 +690,12 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>13</td>
-                        <td>74</td>
+                        <td>12</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -806,7 +806,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "12",
-                 "13",
+                 "12",
                  "14"
                ]
              },
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "72",
                  "73",
-                 "74",
                  "75"
                ]
              },
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "44",
-                 "46",
+                 "45",
                  "47"
                ]
              }
